// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/posts/linkedin PublishPost post with a link works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905098678067871744",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905098678680244225",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images keeps the link if media is present 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905098724528197632",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905098725039890432",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images uploads and posts media 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905098706383646720",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905098707067301888",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost text-only post works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905098673844211713",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905098674272055297",
  },
}
`;
